Overflow fix again

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -215,8 +215,7 @@ html, body, #root {
         border-top: 1px solid white;
         padding-top: 0;
         padding-bottom: 0;
-        padding-bottom: 10px;
-        margin-bottom: 1.5rem;
+        padding-bottom: 0;
     }   
 
     .footer {
